@@ -150,7 +150,7 @@ check_include_file (winsock2.h _hdr_winsock2)
 
 set (CMAKE_REQUIRED_INCLUDES windows.h)
 check_function_exists (_wrename _lib__wrename)
-check_function_exists (_wstat _lib__wstat)
+check_function_exists (_wstat64 _lib__wstat64)
 check_function_exists (_wunlink _lib__wunlink)
 set (CMAKE_REQUIRED_INCLUDES "")
 
