@@ -76,6 +76,7 @@ enum {
   MP4TAG_DBG_NONE                   = 0x0000,
   MP4TAG_DBG_PRINT_FILE_STRUCTURE   = 0x0001,
   MP4TAG_DBG_WRITE                  = 0x0002,
+  MP4TAG_DBG_DUMP_CO                = 0x0004,
 };
 
 /* any changes to this structure must be reflected in mp4tag_clone_tag() */
