@@ -6,6 +6,12 @@
 
 **1.2.4 beta 2023-9---**
 
+* Bug Fixes:
+    * Windows: Allow for linking with UCRT.
+    * Fix tag box length on re-write.
+    * Fix stco/co64 update.
+    * Fix parent box update.
+
 -->
 
 **1.2.3 beta 2023-9-2**
